--- a/apps/billminder/index.html
+++ b/apps/billminder/index.html
@@ -50,11 +50,11 @@
                     Billminder is a minimalist and elegant solution for controlling your expenses. With innovative infographic style display you can see at a glance how much you have to pay. Billminder features a live tile showing the next 30 days of bills so you will never miss a payment.
                 </p>
                 <div id="action">
-                    <a href="http:/.microsoft.com/webpdp/en-US/app/016419f6-fa32-463b-8265-a8d26f3bb0c0" class="m-btn blue big">Download Billminder <i class="m-icon-big-swapdown m-icon-white"></i></a>
+                    <a href="http://apps.microsoft.com/webpdp/en-US/app/billminder/016419f6-fa32-463b-8265-a8d26f3bb0c0" class="m-btn blue big">Download Billminder <i class="m-icon-big-swapdown m-icon-white"></i></a>
                 </div>
             </div>
             <div id="screens">
-                <a href="http:/.microsoft.com/webpdp/en-US/app/016419f6-fa32-463b-8265-a8d26f3bb0c0"><img src="img/year-view.png" /></a>
+                <a href="http://apps.microsoft.com/webpdp/en-US/app/billminder/016419f6-fa32-463b-8265-a8d26f3bb0c0"><img src="img/year-view.png" /></a>
             </div>
         </div>
     </section>
@@ -100,7 +100,7 @@
         </div>
         
         <div id="secondary-action" class="container">
-            <a href="http:/.microsoft.com/webpdp/en-US/app/016419f6-fa32-463b-8265-a8d26f3bb0c0" class="m-btn blue big">Download Billminder <i class="m-icon-big-swapdown m-icon-white"></i></a>
+            <a href="http://apps.microsoft.com/webpdp/en-US/app/billminder/016419f6-fa32-463b-8265-a8d26f3bb0c0" class="m-btn blue big">Download Billminder <i class="m-icon-big-swapdown m-icon-white"></i></a>
         </div>
     </section>
 
